FullQa New/src/objects/Success_Plan_Option__c.object
<CustomObject>
    <fields>
        <fullName>Active_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Plan Option CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Success Plan Options</relationshipLabel>
        <relationshipName>Success_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Success Plan</fullName>
                </value>
                <value>
                    <fullName>Ala Carte Success Plan</fullName>
                </value>
                <value>
                    <fullName>SOW Based Success Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Success Plan Option</label>
    <nameField>
        <label>Success Plan Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plan Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>